# smart_contract_wallet

./: .env  Anchor.toml  Cargo.toml  id.json
programs/wallet_smart_contract/: Cargo.toml
programs/wallet_smart_contract/src/: lib.rs
tests/: wallet_smart_contract_tests.rs
